fixed spacing on home and projects board for mobile

--- a/src/edithome.css
+++ b/src/edithome.css
@@ -114,6 +114,10 @@ html, body {
   .text{
     padding-top: 200px;
   }
+
+  .subtext{
+    text-align: center;
+  }
 }
 
    
