--- a/src/editprojects.css
+++ b/src/editprojects.css
@@ -160,6 +160,7 @@
   .projects-board {
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 
   .project-card {
